<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.deliscafe.MainActivity">

    <ImageView
        android:id="@+id/pic"
        android:src="@drawable/delis_cafe"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/business_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pic"
        android:textStyle="bold|italic"
        android:textSize="24sp"
        android:text="@string/name"
        android:textAlignment="center"
        android:background="@color/colorAccent"
        android:padding="8dp"/>

    <LinearLayout
        android:id="@+id/icons"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@id/business_name"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_phone"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_web"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_location"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_clock"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_below="@id/business_name"
        android:layout_toRightOf="@id/icons"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/tel"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/website"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/location"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/hours"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details"
        android:layout_centerHorizontal="true"
        android:text="@string/slogan"
        android:gravity="center"
        android:textStyle="italic"
        android:textSize="16sp"
        android:textAlignment="center"
        android:background="@color/colorAccent"
        android:padding="8dp"
        android:layout_marginTop="16dp"/>
</RelativeLayout>
